# agent-memory-system

./: .gitignore  Dockerfile  README.md  architecture.drawio  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .coveragerc  CHANGELOG.md  README.md  marker_via_shell.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_install.txt  test_connections.py  test_graph_data.py  test_memory_e2e.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_workspace.py  003_add_webhooks.py
backend/app/: main.py  mcp_server.py
backend/app/api/: agent.py  auth.py  auto_recall.py  business_metrics.py  events.py  graph_memory.py  health.py  hybrid_search.py  long_term_memory.py  memory_evolution.py  memory_extraction.py  memory_fragments.py  memory_lifecycle.py  memory_observability.py  memory_tables.py  memory_variables.py  sessions.py  smart_forgetting.py  system_integration.py  webhooks.py  workspace.py
backend/app/benchmarks/: __init__.py  evaluator.py  longmemeval_adapter.py  runner.py  sample_data.py
backend/app/core/: auth.py  cache.py  chromadb_client.py  circuit_breaker.py  config.py  db_client.py  errors.py  event_bus.py  events.py  init_db.py  log_setup.py  metrics.py  migrations.py  milvus_client.py  pg_client.py  rbac.py  redis_client.py  response.py  schema_ddl.py  test_auth.py  tracing.py  versioning.py
backend/app/integrations/: __init__.py  langchain_memory.py  langchain_tools.py  mcp_server.py
backend/app/models/: orm.py
backend/app/services/: advanced_recall.py  agent_loop.py  agent_memory_sdk.py  api_key_service.py  auto_recall_service.py  context_compressor.py  contradiction_service.py  graph_memory_service.py  hybrid_search_service.py  llm_backend_service.py  llm_extraction_service.py  llm_retry_queue.py  long_term_memory_service.py  memory_extraction_service.py  memory_fragment_service.py  memory_lifecycle_service.py  memory_observability_service.py  memory_table_service.py  memory_variable_service.py  natural_language_query_service.py  oauth_service.py  performance_service.py  plugin_service.py  recall_engine.py  (+5 more)
backend/scripts/: pre_deploy_check.py
backend/tests/: __init__.py  conftest.py  test_advanced_recall.py  test_agent_e2e.py  test_circuit_breaker.py  test_contradiction_service.py  test_dynamic_memory_tables.py  test_event_completeness.py  test_framework_upgrade.py  test_hybrid_cache.py  test_integration.py  test_lifecycle_merge.py  test_llm_retry_queue.py  test_longmemeval_benchmark.py  test_mcp_server.py  test_otel_spans.py  test_performance_baselines.py  test_phase2_workspace.py  test_phase4_events.py  test_phase5_observability.py  test_services.py  test_smart_forgetting.py  test_sql_safety.py  test_temporal_graph.py  test_webhook_delivery.py
sdk-python/: pyproject.toml
sdk-python/examples/: quickstart.py
sdk-python/tests/: test_client.py  test_embedded.py  test_http_transport.py  test_integrations.py
(+112 files in other folders)
