[project]
name = "agent-memory-backend"
version = "0.1.0"
description = "Agent Memory System Backend"
authors = [
    {name = "Developer"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "langchain (>=1.3.11,<2.0.0)",
    "llama-index (>=0.14.22,<0.15.0)",
    "redis (>=8.0.1,<9.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pymilvus (>=3.0.0,<4.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "fakeredis (>=2.36.2,<3.0.0)",
    "chromadb (>=0.5.0,<1.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "openai (>=1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
