[project]
name = "agent-memory-backend"
version = "0.1.0"
description = "Agent Memory System Backend"
authors = [
    {name = "Developer"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "langchain (>=1.3.11,<2.0.0)",
    "llama-index (>=0.14.22,<0.15.0)",
    "redis (>=8.0.1,<9.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pymilvus (>=3.0.0,<4.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "fakeredis (>=2.36.2,<3.0.0)",
    "chromadb (>=0.5.0,<1.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "openai (>=1.0.0)",
    # Phase 0: 基础设施
    "pydantic-settings (>=2.0,<3.0)",
    "structlog (>=24.0,<25.0)",
    "prometheus-client (>=0.20,<1.0)",
    "prometheus-fastapi-instrumentator (>=7.0,<8.0)",
    "httpx (>=0.27,<1.0)",
    # Phase 1: 存储可插拔（ORM + 迁移）
    "sqlalchemy (>=2.0,<3.0)",
    "alembic (>=1.13,<2.0)",
    # Phase 3: SDK 独立化
    "agent-memory-sdk",
]

[project.optional-dependencies]
test = [
    "pytest (>=8.0,<10.0)",
    "pytest-cov (>=5.0,<8.0)",
    "pytest-asyncio (>=0.23,<2.0)",
    "pytest-timeout (>=2.2,<3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
