[project]
name = "agent-memory-sdk"
version = "0.1.0"
description = "Agent Memory System SDK — unified client for HTTP and embedded modes"
authors = [
    {name = "Developer"}
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
embedded = [
    "sqlalchemy>=2.0,<3.0",
    "chromadb>=0.5,<1.0",
    "redis>=5.0,<9.0",
]
langchain = ["langchain-core>=0.3,<2.0"]
mcp = ["mcp>=0.9,<1.0"]
all = ["agent-memory-sdk[embedded,langchain,mcp]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory"]
